proftpd: fix AuthUserFile param

--- a/templates/evolinux.conf.j2
+++ b/templates/evolinux.conf.j2
@@ -3,6 +3,7 @@
 ServerName        "{{ proftpd_hostname }} FTP Server"
 ServerIdent    on "FTP Server Ready"
 AccessGrantMsg    "Hey, bienvenue %u sur le serveur FTP {{ proftpd_fqdn }} !"
+AuthUserFile      /etc/proftpd/vpasswd
 
 # Connexion limits
 MaxInstances      50
